# ayssh

./: .gitignore  .swp  Cargo.toml  lcov.info  xxx
benches/: crypto_bench.rs
coverage-report/: tarpaulin-report.html
docs/: implementation-status.md  memory.md  meta.md  restart.md
docs/archived/: 2026-03-15-ssh-client-implementation.md  master.md  ssh_client_tasks.md  test-coverage-100-percent.md
docs/debug-sessions/: 001-cisco-ios-newkeys-framing.md  002-cisco-ios-encrypted-transport.md  002-post-newkeys-encryption-failure.md  003-chacha20-poly1305-wip.md
docs/plans/: 2026-03-15-e2e-auth-channel.md  implementation-gaps.md  implementation-plan-complete.md  implementation-status.md  ssh_client_implementation.md  test-coverage-gaps.md
docs/rfc/: rfc4250.txt
examples/: cisco_conn.rs  cisco_ssh.rs  shell_server.rs  test_server.rs  unix_conn.rs
prompts/: fix-plans.md  implement.md  periodic.md
src/: agent.rs  authentication.rs  channel.rs  cisco_conn.rs  cisco_ssh.rs  client.rs  config.rs  connection.rs  error.rs  errors.rs  host_key_verify.rs  known_hosts.rs  lib.rs  main.rs  multiplex.rs  port_forward.rs  raw_session.rs  session.rs  sftp.rs  unix_conn.rs
src/auth/: key.rs  keyboard.rs  methods.rs  mod.rs  password.rs  publickey.rs  signature.rs  state.rs
src/channel/: mod.rs  state.rs  types.rs
src/connection/: mod.rs  state.rs
src/crypto/: chacha20_poly1305.rs  cipher.rs  dh.rs  ecdh.rs  hmac.rs  kdf.rs  mod.rs  packet.rs  ssh_chacha20.rs
src/keys/: ecdsa.rs  ed25519.rs  formats.rs  mod.rs  rsa.rs
src/protocol/: algorithms.rs  channel.rs  channel_data.rs  errors.rs  message.rs  messages.rs  mod.rs  service.rs  transport_messages.rs  types.rs
src/server/: encrypted_io.rs  host_key.rs  mod.rs  sftp_server.rs  test_server.rs
src/session/: mod.rs  types.rs
src/transport/: cipher.rs  encrypted.rs  handshake.rs  kex.rs  mod.rs  packet.rs  session.rs  session_id.rs  state.rs  version.rs
src/utils/: buffer.rs  mod.rs  string.rs
tests/: debug_key.rs  debug_key_parse.rs  debug_openssh_rsa.rs  ssh_client_interop.rs  sshd_interop.rs  test_ed25519_key  test_rsa_key  test_rsa_key.pub
tests/integration/: algo_tests.rs  auth_method_tests.rs  auth_signature_flow_tests.rs  auth_signature_tests.rs  auth_state_tests.rs  authenticator_tests.rs  basic_test.rs  chacha20_tests.rs  channel_mgmt_tests.rs  channel_state_tests.rs  channel_tests.rs  channel_transfer_tests.rs  cipher_tests.rs  cli_tests.rs  client_auth_tests.rs  client_config_tests.rs  client_tests.rs  connection_state_tests.rs  connection_tests.rs  e2e_password_auth_tests.rs  e2e_shell_tests.rs  e2e_tests.rs  encoding_tests.rs  encrypted_transport_tests.rs  encryption_tests.rs  handshake_tests.rs  helpers.rs  hmac_tests.rs  kdf_tests.rs  key_format_tests.rs  keyboard_auth_tests.rs  known_hosts_tests.rs  mod.rs  packet_tests.rs  password_auth_tests.rs  publickey_auth_tests.rs  real_server_tests.rs  rfc_compliance_tests.rs  rsa_key_tests.rs  service_request_tests.rs  (+3 more)
tests/integration/fixtures/: mod.rs
tests/keys/: test_ecdsa_256  test_ecdsa_256.pub  test_ecdsa_384  test_ecdsa_384.pub  test_ecdsa_521  test_ecdsa_521.pub  test_ed25519  test_ed25519.pub  test_rsa_2048  test_rsa_2048.pub  test_rsa_4096  test_rsa_4096.pub  test_rsa_8192  test_rsa_8192.pub
