[package]
name = "ssh_client"
version = "0.1.0"
edition = "2021"
authors = ["SSH Client Team"]
description = "A Rust SSH client library and binary"
license = "MIT"
keywords = ["ssh", "async", "network", "client"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging framework (consistent with aytelnet)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Logging initialization
env_logger = "0.10"

# Hex encoding for debugging
hex = "0.4"

# Buffer operations for SSH protocol
bytes = "1.5"

# Secure memory zeroing
zeroize = "1.7"

# Crypto (for implementation)
ring = "0.17"

# Constant-time operations
subtle = "2.5"

# Large integer arithmetic for DH
num-bigint = "0.4"
num-traits = "0.2"

# SHA-2 hash functions
sha2 = "0.10"

# Random number generation
rand = "0.8"

# Lazy static initialization
lazy_static = "1.4"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"

# Temp files for key testing
tempfile = "3.9"

# Random port generation
rand = "0.8"

[lib]
name = "ssh_client"
path = "src/lib.rs"

[[bin]]
name = "ssh_client"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
